src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Auction_Ticket_OppId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Auction Ticket opportunity that paid for this attendee.</inlineHelpText>
        <label>Auction Ticket</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Auction Attendees</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_Number__c</fullName>
        <inlineHelpText>The attendee&apos;s Bid Number, used to identify their purchases.  It is recommended that only one person per household is given a Bid Number.</inlineHelpText>
        <label>Bid Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Checked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>we added this for the Check In page, but then decided it would be better to track this with the CampaignMember Status field.</description>
        <label>UNUSED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Table_Captain__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this attendee an Auction table captain?</inlineHelpText>
        <label>Is Table Captain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meal_Preference__c</fullName>
        <description>The list of meal choices can be changed for each auction.</description>
        <label>Meal Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beef</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Fish</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <inlineHelpText>Any specific instructions about this Auction Attendee</inlineHelpText>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has this Auction Attendee&apos;s ticket been paid for?</inlineHelpText>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Table_Captain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the Auction table captain for the table they are seated at.</inlineHelpText>
        <label>Table Captain</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Auction Table Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Table_Name_Number__c</fullName>
        <inlineHelpText>The table the Auction Attendee is seated at.</inlineHelpText>
        <label>Table Name/Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>GW_Auction_Attendee</fullName>
        <active>true</active>
        <description>Custom record type to hold additional fields needed for Auction Attendees</description>
        <label>GW Auction Attendee</label>
    </recordTypes>
</CustomObject>